--- a/allunbot/templates/base.html
+++ b/allunbot/templates/base.html
@@ -69,7 +69,7 @@
         </div>
 
       <!-- FOOTER -->
-      <footer class="container">
+      <footer class="bg-dark">
         <p class="float-end"><a href="#">Back to top</a></p>
         <p>
           <a href="https://github.com/Deipzza/ppi_02/blob/main/LICENSE.md">License</a>
