--- a/allunbot/templates/calculadora.html
+++ b/allunbot/templates/calculadora.html
@@ -5,6 +5,7 @@
 
 {% block content %}
 <div class="row">
+    <h1 id="plan_estudios"></h1>
 
     <div class="col-4 info_metricas"> 
         <div class="row info_metric">
