--- a/allunbot/templates/login.html
+++ b/allunbot/templates/login.html
@@ -7,11 +7,11 @@
     <form method="post">
         <div class="mb-3">
             <label for="username" class="form-label">Usuario institucional</label>
-            <input type="text" class="form-control" id="username" name="username">
+            <input type="text" class="form-control" id="username" name="username" required>
         </div>
         <div class="mb-3">
             <label for="token" class="form-label">Token</label>
-            <input type="text" class="form-control" id="token" name="token">
+            <input type="text" class="form-control" id="token" name="token" required>
         </div>
         <div class="mb-3">
             <label for="password" class="form-label">Contraseña</label>
@@ -21,7 +21,7 @@
             <input type="checkbox" class="form-check-input" id="datos">
             <label class="form-check-label" for="datos" required>Acepta el tratamiento de datos personales</label>
         </div>
-        <button type="submit" class="btn btn-primary">LogIn</button>
+        <button style="width: 100%;" type="submit" class="btn btn-primary">Ingresar</button>
     </form>
 </div>
 {% endblock %}
