--- a/allunbot/templates/base.html
+++ b/allunbot/templates/base.html
@@ -51,9 +51,16 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
           <ul class="navbar-nav me-auto mb-2 mb-md-0">
+            
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="#">Inicio</a>
             </li>
+            {% if not logged %}
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="/auth_ldap">Login</a>
+            </li>
+            {% endif %}
+            
           </ul>
         </div>
       </div>
