--- a/allunbot/templates/tasks.html
+++ b/allunbot/templates/tasks.html
@@ -2,6 +2,8 @@
 styles %}
 <link href="../assets/dist/css/dashboard.css" rel="stylesheet" />
 <link href="../assets/dist/css/tasks.css" rel="stylesheet" />
+{% endblock %} {% block scripts %}
+<script src="../assets/dist/js/tasks.js"></script>
 {% endblock %} {% block page_content %}
 <div class="page-content">
   <div class="header">Mis tareas</div>
@@ -54,7 +56,6 @@ styles %}
         Archivado
       </button>
     </li>
-    
   </ul>
   <div class="tab-content" id="myTabContent">
     <div
@@ -149,7 +150,6 @@ styles %}
           <span class="tag waiting">Waiting</span>
         </div>
       </div>
-
     </div>
     <div
       class="tab-pane fade show active"
@@ -158,83 +158,81 @@ styles %}
       aria-labelledby="recordatorios-tab"
       tabindex="0"
     >
-    <div class="Acciones d-flex justify-content-end">
-      <button class="btn btn-primary">
-        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-save" viewBox="0 0 16 16">
-          <path d="M2 1a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H9.5a1 1 0 0 0-1 1v7.293l2.646-2.647a.5.5 0 0 1 .708.708l-3.5 3.5a.5.5 0 0 1-.708 0l-3.5-3.5a.5.5 0 1 1 .708-.708L7.5 9.293V2a2 2 0 0 1 2-2H14a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2h2.5a.5.5 0 0 1 0 1H2z"/>
-        </svg>
-      </button>
-      <button class="btn btn-success">
-        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus" viewBox="0 0 16 16">
-          <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
-        </svg>
-      </button>
-      <button class="btn btn-danger">
-        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash" viewBox="0 0 16 16">
-          <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5Zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5Zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6Z"/>
-          <path d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1ZM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118ZM2.5 3h11V2h-11v1Z"/>
-        </svg>
-      </button>
-    </div>
-      <div class="tasks-wrapper">
-        
-        <div class="task">
-          <div class="colapse_button">
-            <a class="collapse_table" type="button" data-bs-toggle="collapse" data-bs-target="#collapseWidthExample" aria-expanded="false" aria-controls="collapseWidthExample">
-              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chevron-right" viewBox="0 0 16 16">
-                <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z"/>
+      <div class="Acciones d-flex justify-content-end">
+        <button class="btn btn-primary" onclick="save_task()">
+          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-save" viewBox="0 0 16 16">
+            <path d="M2 1a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H9.5a1 1 0 0 0-1 1v7.293l2.646-2.647a.5.5 0 0 1 .708.708l-3.5 3.5a.5.5 0 0 1-.708 0l-3.5-3.5a.5.5 0 1 1 .708-.708L7.5 9.293V2a2 2 0 0 1 2-2H14a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2h2.5a.5.5 0 0 1 0 1H2z"/>
+          </svg>
+        </button>
+
+        <button class="btn btn-primary" onclick="edit_task('task_1')">
+          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil-square" viewBox="0 0 16 16">
+            <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
+            <path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z"/>
+          </svg>
+        </button>
+
+        <button class="btn btn-success" onclick="add_task('task_1')">
+          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus" viewBox="0 0 16 16">
+            <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
+          </svg>
+        </button>
+
+        <button class="btn btn-danger">
+          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash" viewBox="0 0 16 16">
+            <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5Zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5Zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6Z"/>
+            <path d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1ZM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118ZM2.5 3h11V2h-11v1Z" />
+          </svg>
+        </button>
+      </div>
+
+      <div class="tasks-wrapper" id="task_1">
+
+        {% for task in tasks %}
+        <div class="task" id="{{task['_id']}}">
+          
+          <div class="colapse_button col-1">
+            <a
+              class="collapse_table"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#colapse_{{task['_id']}}"
+              aria-expanded="false"
+              aria-controls="collapseWidthExample"
+            >
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="16"
+                height="16"
+                fill="currentColor"
+                class="bi bi-chevron-right"
+                viewBox="0 0 16 16"
+              >
+                <path
+                  fill-rule="evenodd"
+                  d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z"
+                />
               </svg>
             </a>
           </div>
-          <div class="name_task">
-              <span class="label-text">Dashboard Design Implementation</span>
+          <div class="name_task col-5">
+            <span class="label-text">
+              {{task["name"]}}
+            </span>
           </div>
-          <div class="Materia">
-            Español
+          <div class="subject_task col-5">
+            {{task["subject"]}}
           </div>
-          <span class="tag approved">Approved</span>
+          <!-- <span class="tag approved">Approved</span> -->
+          <input class="task-item task_check col-1" name="task" type="checkbox" value="{{task['_id']}}" id="item-1"/>
 
-          <input class="task-item" name="task" type="checkbox" id="item-1" checked/>
         </div>
-        <div class="collapse_description">
-          <div class="collapse" id="collapseWidthExample">
-            <div class="content_body_collapse">
-              This is some placeholder content for a horizontal collapse. It's hidden by default and shown when triggered.
-            </div>
+        <div class="description_task">
+          <div class="collapse" id="colapse_{{task["_id"]}}">
+            <div class="content_body_collapse">{{task["description"]}}</div>
           </div>
         </div>
-
-        
-        
-        <div class="header upcoming">Upcoming Tasks</div>
-        <div class="task">
-          <input class="task-item" name="task" type="checkbox" id="item-7" />
-          <label for="item-7">
-            <span class="label-text">Dashboard Design Implementation</span>
-          </label>
-          <span class="tag waiting">Waiting</span>
-        </div>
-        <div class="task">
-          <input class="task-item" name="task" type="checkbox" id="item-8" />
-          <label for="item-8">
-            <span class="label-text">Create a userflow</span>
-          </label>
-          <span class="tag waiting">Waiting</span>
-        </div>
-        <div class="task">
-          <input class="task-item" name="task" type="checkbox" id="item-9" />
-          <label for="item-9">
-            <span class="label-text">Application Implementation</span>
-          </label>
-          <span class="tag waiting">Waiting</span>
-        </div>
-        <div class="task">
-          <input class="task-item" name="task" type="checkbox" id="item-10" />
-          <label for="item-10">
-            <span class="label-text">Create a Dashboard Design</span>
-          </label>
-          <span class="tag waiting">Waiting</span>
-        </div>
+        {% endfor %}
       </div>
     </div>
     <div
