--- a/allunbot/templates/base.html
+++ b/allunbot/templates/base.html
@@ -67,8 +67,7 @@
     </nav>
   </header>
 
-  <main>
-    <div class="detalle">
+    <div class="container">
       {% block content %}{% endblock %}
     </div>
 
@@ -79,7 +78,6 @@
         <a href="https://github.com/Deipzza/ppi_02/blob/main/LICENSE.md">License</a>
       </p>
     </footer>
-  </main>
 
   <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
   {% block scripts %}{% endblock %}
