--- a/allunbot/templates/dashboard.html
+++ b/allunbot/templates/dashboard.html
@@ -7,7 +7,7 @@
 
 {% block content %}
 <link href="https://fonts.googleapis.com/css?family=DM+Sans:400,500,700&display=swap" rel="stylesheet">
-<div class="task-manager">
+<div class="task-manager row">
   
   <div class="left-bar col-2">
     <div class="top-part">
@@ -49,7 +49,7 @@
     </div>
   </div>
 
-  <div class="col-7 overflow-auto main-page">
+  <div class="col-7 main-page">
     
     {% block page_content %} 
 
