--- a/allunbot/templates/dashboard.html
+++ b/allunbot/templates/dashboard.html
@@ -1,72 +1,108 @@
-
-{% extends 'base.html' %}
-{% block title %}Dashboard{% endblock %}
-{% block styles %}
+{% extends 'base.html' %} {% block title %}Dashboard{% endblock %} {% block
+styles %}
 <link href="../assets/dist/css/dashboard.css" rel="stylesheet" />
-{% endblock %}
-
-{% block content %}
-<link href="https://fonts.googleapis.com/css?family=DM+Sans:400,500,700&display=swap" rel="stylesheet">
+{% endblock %} {% block content %}
+<link
+  href="https://fonts.googleapis.com/css?family=DM+Sans:400,500,700&display=swap"
+  rel="stylesheet"
+/>
 <div class="task-manager row">
-  
   <div class="left-bar col-2">
     <div class="top-part">
-      <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
-        stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-        class="feather feather-users">
-        <path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2" />
-        <circle cx="9" cy="7" r="4" />
-        <path d="M23 21v-2a4 4 0 0 0-3-3.87" />
-        <path d="M16 3.13a4 4 0 0 1 0 7.75" /></svg>
+      <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+        <g
+          id="SVGRepo_tracerCarrier"
+          stroke-linecap="round"
+          stroke-linejoin="round"
+        ></g>
+        <g id="SVGRepo_iconCarrier">
+          <g id="User / User_01">
+            <path
+              id="Vector"
+              d="M19 21C19 17.134 15.866 14 12 14C8.13401 14 5 17.134 5 21M12 11C9.79086 11 8 9.20914 8 7C8 4.79086 9.79086 3 12 3C14.2091 3 16 4.79086 16 7C16 9.20914 14.2091 11 12 11Z"
+              stroke="currentColor"
+              stroke-width="1.2"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            ></path>
+          </g>
+        </g>
+      </svg>
       <div class="count">{{username}}</div>
     </div>
+
     <div class="left-content">
       <ul class="action-list">
         {% if info_sia %}
         <li class="item">
-          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-calculator-fill" viewBox="0 0 16 16">
-            <path d="M2 2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V2zm2 .5v2a.5.5 0 0 0 .5.5h7a.5.5 0 0 0 .5-.5v-2a.5.5 0 0 0-.5-.5h-7a.5.5 0 0 0-.5.5zm0 4v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5zM4.5 9a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5h-1zM4 12.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5zM7.5 6a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5h-1zM7 9.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5zm.5 2.5a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5h-1zM10 6.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5zm.5 2.5a.5.5 0 0 0-.5.5v4a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-4a.5.5 0 0 0-.5-.5h-1z"/>
-          </svg>
           <a href="{{ url_for('calculadora') }}">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="16"
+            height="16"
+            fill="currentColor"
+            class="bi bi-calculator-fill"
+            viewBox="0 0 16 16"
+          >
+            <path
+              d="M2 2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V2zm2 .5v2a.5.5 0 0 0 .5.5h7a.5.5 0 0 0 .5-.5v-2a.5.5 0 0 0-.5-.5h-7a.5.5 0 0 0-.5.5zm0 4v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5zM4.5 9a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5h-1zM4 12.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5zM7.5 6a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5h-1zM7 9.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5zm.5 2.5a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5h-1zM10 6.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5zm.5 2.5a.5.5 0 0 0-.5.5v4a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-4a.5.5 0 0 0-.5-.5h-1z"
+            />
+          </svg>
             <span>Calculadora de notas</span>
           </a>
         </li>
 
         <li class="item">
-          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" stroke="currentColor"
-            stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="feather feather-calendar"
-            viewBox="0 0 24 24">
+          <a href="{{ url_for('task') }}">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="24"
+            height="24"
+            fill="none"
+            stroke="currentColor"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            stroke-width="2"
+            class="feather feather-calendar"
+            viewBox="0 0 24 24"
+          >
             <rect width="18" height="18" x="3" y="4" rx="2" ry="2" />
             <path d="M16 2v4M8 2v4m-5 4h18" />
           </svg>
-          <a href="{{ url_for('task') }}">
             <span>Tareas</span>
           </a>
         </li>
         {% endif %}
-
       </ul>
     </div>
+    <a role="button" class="btn btn-primary logout" href="{{url_for('logout')}}">Cerrar sesión</a>
   </div>
 
   <div class="col-7 main-page">
-    
-    {% block page_content %} 
-
-    {% if not info_sia %}
+    {% block page_content %} {% if not info_sia %}
     <div class="nota">
-      <p>No hemos podido encontrar tu información del sia en nuestra base de datos.</p>
+      <p>
+        No hemos podido encontrar tu información del sia en nuestra base de
+        datos.
+      </p>
 
       <p>Si quieres hacer uso de todas nuestras funcionalidades por favor:</p>
-      <p>1. Ingresa a: <a href = "https://telegram.me/allun_dev_bot" target="_blank">@Allunbot</a> </p>
+      <p>
+        1. Ingresa a:
+        <a href="https://telegram.me/allun_dev_bot" target="_blank"
+          >@Allunbot</a
+        >
+      </p>
       <p>2. Da click en "Iniciar chat".</p>
       <p>3. Ingresa la opción "/informacion_sia"</p>
-      <p>4. Recarga está pagina luego de recibir el mensaje de bienvenida al chat.</p>
+      <p>
+        4. Recarga está pagina luego de recibir el mensaje de bienvenida al
+        chat.
+      </p>
       <p></p>
     </div>
-    {% endif %}
-
-    {% endblock %}
+    {% endif %} {% endblock %}
   </div>
 
   <div class="right-bar col-3">
@@ -105,7 +141,7 @@
           <div class="time">08:00 - 09:00 PM</div>
           <div class="task-name">Release Event</div>
         </div>
-        <div class="more-button"></div>        
+        <div class="more-button"></div>
       </div>
       <div class="task-box yellow">
         <div class="description-task">
@@ -118,6 +154,4 @@
   </div>
 </div>
 
-
 {% endblock %}
-
