Updated: Revisions on pull-request

--- a/allunbot/templates/base.html
+++ b/allunbot/templates/base.html
@@ -79,7 +79,7 @@
                   <a
                     class="nav-link active"
                     aria-current="page"
-                    href="/auth_ldap"
+                    href="{{url_for('auth_ldap_page')}}"
                     >Login</a
                   >
                 </li>
