Updated: small changes

--- a/allunbot/templates/create_events.html
+++ b/allunbot/templates/create_events.html
@@ -52,7 +52,7 @@
             </div>
 
             <div class="col mb-3">
-                <label for="time" class="form-label">Hora de inicio</label>
+                <label for="time" class="form-label">Hora de finalización</label>
                 <input type="time" class="form-control" id="time" name="final-time">
             </div>
 
