Updated: hopefully final changes

--- a/allunbot/templates/all_events.html
+++ b/allunbot/templates/all_events.html
@@ -31,7 +31,7 @@ styles %}
                     <div style="overflow-wrap: break-word; width: inherit;">{{event["url"] if event["url"] is not none
                         else ""}}</div>
                 </td>
-                <td class="event_dependecy" style="width: 200px;">{{event["dependecy"] if event["dependecy"] is not none
+                <td class="event_dependency" style="width: 200px;">{{event["dependency"] if event["dependency"] is not none
                     else ""}}</td>
                 <td class="event_date" style="width: 100px;">{{event["date"] if event["date"] is not none else "" }}
                 </td>
