--- a/allunbot/templates/create_events.html
+++ b/allunbot/templates/create_events.html
@@ -29,8 +29,8 @@
 
         <div class="row">
             <div class="col mb-3">
-                <label for="dependecy" class="form-label">Dependencia <span class="require">*</span></label>
-                <input type="text" class="form-control" id="dependecy" name="dependecy" required>
+                <label for="dependency" class="form-label">Dependencia <span class="require">*</span></label>
+                <input type="text" class="form-control" id="dependency" name="dependency" required>
             </div>
 
             <div class="col mb-3">
