--- a/allunbot/templates/events.html
+++ b/allunbot/templates/events.html
@@ -41,7 +41,7 @@
                   <td class="event_url" style="width: 200px;">
                     <div style="overflow-wrap: break-word; width: inherit;">{{event["url"] if event["url"] is not none else ""}}</div>
                   </td>
-                  <td class="event_dependecy" style="width: 200px;">{{event["dependecy"] if event["dependecy"] is not none else ""}}</td>
+                  <td class="event_dependency" style="width: 200px;">{{event["dependency"] if event["dependency"] is not none else ""}}</td>
                   <td class="event_date" style="width: 100px;">{{event["date"] if event["date"] is not none else "" }}</td>
                   <td class="event_start-time" style="width: 100px;">{{event["start-time"] if event["start-time"] is not none else ""}}</td>
                   <td class="event_final-time" style="width: 100px;">{{event["final-time"] if event["final-time"] is not none else ""}}</td>
