changes styles responsive

--- a/allunbot/templates/calculadora.html
+++ b/allunbot/templates/calculadora.html
@@ -24,7 +24,7 @@ block styles %}
 </div>
 
 <div class="container-table">
-  <div class="info_calificaciones">
+  <div class="info_calificaciones table-responsive">
     <table class="table table-striped table-bordered" id="calificaciones">
       <thead class="table-secondary">
         <tr>
