--- a/allunbot/templates/dashboard.html
+++ b/allunbot/templates/dashboard.html
@@ -4,7 +4,7 @@ styles %}
 {% endblock %} {% block content %}
 <link href="https://fonts.googleapis.com/css?family=DM+Sans:400,500,700&display=swap" rel="stylesheet" />
 <div class="task-manager row">
-  <div class="left-bar col-2">
+  <div class="left-bar col-md-2 col-sm-12">
     <div class="top-part">
       <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
         <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
@@ -100,7 +100,7 @@ styles %}
     <a role="button" class="btn btn-primary logout" href="{{url_for('logout')}}">Cerrar sesión</a>
   </div>
 
-  <div class="col-7 main-page">
+  <div class="col-md-7 col-sm-12 main-page">
     {% block page_content %} {% if not info_sia %}
     <div class="nota">
       <p>
@@ -124,7 +124,7 @@ styles %}
     {% endif %} {% endblock %}
   </div>
 
-  <div class="right-bar col-3">
+  <div class="right-bar col-md-3 col-sm-12">
     <div class="header">Eventos de hoy</div>
     <div class="right-content">
       {% for event in today_events %}
