--- a/allunbot/templates/auth_ldap.html
+++ b/allunbot/templates/auth_ldap.html
@@ -1,6 +1,10 @@
+<!-- Implement general template -->
 {% extends 'base.html' %}
+
+<!-- Make to changes and add information in the head -->
 {% block title %}Login{% endblock %}
 
+<!-- Main content of the page -->
 {% block content %}
 <div class="d-flex justify-content-center align-items-center" style="min-height: calc(100vh - 56px - 54px);">
     
