--- a/allunbot/templates/base.html
+++ b/allunbot/templates/base.html
@@ -12,7 +12,7 @@
       href="https://getbootstrap.com/docs/5.3/examples/carousel/"
     />
     <link href="../assets/dist/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="../assets/dist/css/carousel.css" rel="stylesheet" />
+    <link href="../assets/dist/css/base.css" rel="stylesheet" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.3/dist/sweetalert2.min.css"
