--- a/allunbot/templates/index.html
+++ b/allunbot/templates/index.html
@@ -1,16 +1,23 @@
-
+<!-- Implement general template -->
 {% extends 'base.html' %}
+
+<!-- Make to changes and add information in the head -->
 {% block title %}Inicio{% endblock %}
 
+<!-- Main content of the page -->
 {% block content %}
+
+<!-- Information about the aplication -->
 <div
   class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-body-tertiary main"
   style="padding: 0 3rem !important"
 >
   <div class="row">
+    
     <div class="col-md-5">
       <img class="img-fluid" src="../assets/dist/images/mano.svg" />
     </div>
+
     <div class="col-md-7 p-lg-5 my-5">
       <h2 class="display-4 fw-normal">
         Todo en <span class="text-body-secondary">UN</span> Bot
@@ -30,6 +37,7 @@
   </div>
 </div>
 
+<!-- Seccion autors -->
 <div class="container marketing">
   <div class="row">
     <div class="col-lg-2"></div>
