--- a/allunbot/templates/dashboard.html
+++ b/allunbot/templates/dashboard.html
@@ -1,10 +1,22 @@
-{% extends 'base.html' %} {% block title %}Dashboard{% endblock %} {% block
-styles %}
+<!-- Implement general template -->
+{% extends 'base.html' %}
+
+<!-- Make to changes and add information in the head -->
+{% block title %}Dashboard{% endblock %} 
+
+{% block styles %}
 <link href="../assets/dist/css/dashboard.css" rel="stylesheet" />
-{% endblock %} {% block content %}
+{% endblock %}
+
+<!-- Main content of the page -->
+{% block content %}
 <link href="https://fonts.googleapis.com/css?family=DM+Sans:400,500,700&display=swap" rel="stylesheet" />
 <div class="task-manager row">
+  
+  <!-- Seccion left -->
   <div class="left-bar col-md-2 col-sm-12">
+
+    <!-- Information count -->
     <div class="top-part">
       <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
         <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
@@ -20,6 +32,7 @@ styles %}
       <div class="count">{{username}}</div>
     </div>
 
+    <!-- Options menu -->
     <div class="left-content">
       <ul class="action-list">
         {% if info_sia %}
@@ -97,9 +110,12 @@ styles %}
 
       </ul>
     </div>
+
+    <!-- Logout -->
     <a role="button" class="btn btn-primary logout" href="{{url_for('logout')}}">Cerrar sesión</a>
   </div>
 
+  <!-- Seccion center -->
   <div class="col-md-7 col-sm-12 main-page">
     {% block page_content %} {% if not info_sia %}
     <div class="nota">
@@ -124,8 +140,11 @@ styles %}
     {% endif %} {% endblock %}
   </div>
 
+  <!-- Seccion right -->
   <div class="right-bar col-md-3 col-sm-12">
+
     <div class="header">Eventos de hoy</div>
+    
     <div class="right-content">
       {% for event in today_events %}
       <a href="{{event['url'] if event['url'] != none else ""}}" target="_blank" class="enlace">
