--- a/allunbot/templates/login.html
+++ b/allunbot/templates/login.html
@@ -1,26 +1,52 @@
+<!-- Implement general template -->
 {% extends 'base.html' %}
+
+<!-- Make to changes and add information in the head -->
 {% block title %}Login{% endblock %}
 
+<!-- Main content of the page -->
 {% block content %}
 <div class="d-flex justify-content-center align-items-center">
-    <form method="post">
-        <div class="mb-3">
-            <label for="username" class="form-label">Usuario institucional</label>
-            <input type="text" class="form-control" id="username" name="username" required>
-        </div>
-        <div class="mb-3">
-            <label for="token" class="form-label">Token</label>
-            <input type="text" class="form-control" id="token" name="token" required>
-        </div>
-        <div class="mb-3">
-            <label for="password" class="form-label">Contraseña</label>
-            <input type="password" class="form-control" id="password" name="password" required>
-        </div>
-        <div class="mb-3 form-check">
-            <input type="checkbox" class="form-check-input" id="datos">
-            <label class="form-check-label" for="datos" required>Acepta el tratamiento de datos personales</label>
-        </div>
-        <button style="width: 100%;" type="submit" class="btn btn-primary">Ingresar</button>
-    </form>
+  <form method="post">
+    <div class="mb-3">
+      <label for="username" class="form-label">Usuario institucional</label>
+      <input
+        type="text"
+        class="form-control"
+        id="username"
+        name="username"
+        required
+      />
+    </div>
+    <div class="mb-3">
+      <label for="token" class="form-label">Token</label>
+      <input
+        type="text"
+        class="form-control"
+        id="token"
+        name="token"
+        required
+      />
+    </div>
+    <div class="mb-3">
+      <label for="password" class="form-label">Contraseña</label>
+      <input
+        type="password"
+        class="form-control"
+        id="password"
+        name="password"
+        required
+      />
+    </div>
+    <div class="mb-3 form-check">
+      <input type="checkbox" class="form-check-input" id="datos" />
+      <label class="form-check-label" for="datos" required
+        >Acepta el tratamiento de datos personales</label
+      >
+    </div>
+    <button style="width: 100%" type="submit" class="btn btn-primary">
+      Ingresar
+    </button>
+  </form>
 </div>
 {% endblock %}
