Added: Data treatment document

--- a/allunbot/templates/auth_ldap.html
+++ b/allunbot/templates/auth_ldap.html
@@ -23,7 +23,7 @@
         </div>
         <div class="mb-3 form-check">
             <input type="checkbox" class="form-check-input" id="datos">
-            <label class="form-check-label" for="datos" required>Acepta el tratamiento de datos personales</label>
+            <label class="form-check-label" for="datos" required>Acepta el <a href="/tratamiento_datos_personales" target="_blank">tratamiento de datos personales</a></label>
         </div>
         <button style="width: 100%;" type="submit" class="btn btn-primary">Ingresar</button>
     </form>
